Fixes Spacing On Mobile And iPad Edit Forms

--- a/app/assets/stylesheets/salt_spray_tests.scss
+++ b/app/assets/stylesheets/salt_spray_tests.scss
@@ -84,9 +84,12 @@
   .rust-spot-info {
     border: 1px solid lightgray;
     margin-bottom: 10px;
-    margin-top: 10px;
     padding-top: 10px;
     font-size: 12px;
+  }
+
+  .rust-spot-info.ipad {
+    margin-top: 10px;
   }
 
   .spec-failed {
@@ -136,6 +139,10 @@
     input, button {
       width: 130px;
     }
+  }
+
+  .mobile-attachments-btn {
+    margin-bottom: 0;
   }
 
   // Table row colors
